Added /public folder

--- a/about/index.html
+++ b/about/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>About Me</h1>
-    <p><h2 id="about-me">About Me</h2>
-<p>Hi, I’m a game developer! 🎮 This is my portfolio.</p>
+    <p><h2 id="hi-im-asdfasld">Hi, I&rsquo;m asdfasld</h2>
+<p>asdfl;kajsdfkl</p>
 </p>
     <a href="/">Back to Home</a>
 </body>
