--- a/public/project/index.html
+++ b/public/project/index.html
@@ -1,4 +1,8 @@
-<link rel="stylesheet" href="/css/project_detail.css">
+<script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><title> Ldwork Game Dev</title>
+<head>
+    <link rel="stylesheet" href="/css/project_detail.css">
+    <link rel="icon" href="/images/favicon.png" type="image/png">
+</head>
 
  
  <div class="title-social-container">
