- Deployed for favicon and page header adding.

--- a/project/index.html
+++ b/project/index.html
@@ -1,4 +1,8 @@
-<link rel="stylesheet" href="/css/project_detail.css">
+<title> Ldwork Game Dev</title>
+<head>
+    <link rel="stylesheet" href="/css/project_detail.css">
+    <link rel="icon" href="/images/favicon.png" type="image/png">
+</head>
 
  
  <div class="title-social-container">
