--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                 </div>
                 
                 <div class="project-card" data-tags="Unreal Engine, Personal" onclick="navigateToProject( 3 )">
-                    <img src="/images/projects/action-rougelike/ar-banner.png" alt="Action Rougelike" class="project-image">
+                    <img src="/images/projects/action-roguelike/ar-banner.png" alt="Action Roguelike" class="project-image">
                     <div class="project-info">
-                    <h3 class="project-name">Action Rougelike</h3>
+                    <h3 class="project-name">Action Roguelike</h3>
                     <p class="project-time">2022-2023</p>
                     <p class="project-tags">Unreal Engine, Personal</p>
                     </div>
